--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,18 +22,16 @@ android {
 def supportVersion = '25.3.0'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(':sinch-android-rtc-3.11.0')
     compile "com.android.support:appcompat-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
     compile "com.android.support:cardview-v7:$supportVersion"
-
     compile 'net.danlew:android.joda:2.9.7'
-
     compile 'com.google.firebase:firebase-database:10.2.0'
-
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
