--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
         </activity>
         <activity
             android:name=".IncomingCallActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            />
 
         <service
             android:name=".IncommingCallService"
@@ -57,6 +58,19 @@
             android:parentActivityName=".MainActivity"
             >
         </activity>
+
+        <activity
+            android:name=".sinch.calling.CallScreenActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+
+        <activity
+            android:name=".sinch.calling.IncomingCallScreenActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+
     </application>
 
 </manifest>
