--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         </activity>
 
         <activity
-            android:name=".OldIncomingCallActivity"
+            android:name=".OutgoingCallActivity"
             android:theme="@style/AppTheme.NoActionBar"
             />
 
