Show missed alarm notification IncomingCall will now turn on the screen and be shown on top of the lock screen  Code cleanup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,11 +45,11 @@
             />
 
         <service
-            android:name=".IncommingCallService"
+            android:name=".oldcode.IncommingCallService"
             android:exported="false"
             />
         <service
-            android:name=".CallService"
+            android:name=".oldcode.CallService"
             android:enabled="true"
             android:exported="true"
             />
