--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 def supportVersion = '25.3.0'
@@ -32,6 +35,8 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportVersion"
     compile 'net.danlew:android.joda:2.9.7'
     compile 'com.google.firebase:firebase-database:10.2.0'
+
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
 apply plugin: 'com.google.gms.google-services'
