--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
          </receiver>
 
         <receiver
-            android:name=".CallReceiver"
+            android:name=".PerformOutgoingCallReceiver"
             android:process=":remote" />
 
         <activity
