--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportVersion"
     compile 'net.danlew:android.joda:2.9.7'
     compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
