--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,6 +45,7 @@
         <activity
             android:name=".OutgoingCallActivity"
             android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"
             />
 
         <service
@@ -73,6 +76,7 @@
         <activity
             android:name=".EditAlarmActivity"
             android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
             >
         </activity>
 
